# Spotify-API

./: Makefile  README.md  api_calls.py  connections.py  dev.env  install_sql_server_tools.sh  main.py  pyproject.toml
AzureFunction/: recently_played_tracks_by_hour.py
src/app/: app.py  sql_connection.py
src/app/static/css/: spotify-theme.css
src/app/static/js/: main.js
src/app/templates/: 404.html  index.html  layout.html  top.html  wrapped.html
